--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "yogisaputro",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "create-react-app": "^5.0.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.3.3",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "swagger-ui-express": "^4.3.0"
   }
 }
